--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "parcel-project-template",
+  "name": "icecream-store-landing",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Shushikian.github.io/ice-cream_team-project",
+  "homepage": "https://yermachkov.github.io/icecream-store-landing",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /ice-cream_team-project/"
+    "build": "parcel build src/*.html --public-url /icecream-store-landing/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/yermachkov/icecream-store-landing.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
